# VelvetEngine

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: main.cpp  mathutil.cpp  mathutil.h  renderer.cpp  renderer.h  sdlutil.cpp  sdlutil.h
